1 Код отформатирован согласно checkstyle.xml 2 BASE_URL берется из конфига